--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -22,7 +22,6 @@ es:
     errors:
       bad_dob: Su fecha de nacimiento debe ser una fecha válida.
       duplicate_ssn: Ya existe una cuenta con la información que proporcionó.
-      hardfail: No pudimos verificar su identidad en este momento.
       incorrect_password: La contraseña que ingresó no es correcta.
       mail_limit_reached: Usted ha solicitado demasiado correo en el último mes.
       pattern_mismatch:
@@ -33,6 +32,35 @@ es:
       unsupported_jurisdiction: Lo sentimos, no podemos verificar personas de este
         estado.
       unsupported_jurisdiction_sp: Visita %{sp_name} para acceder a tu cuenta.
+    failure:
+      attempts:
+        one: Tiene usted <strong> 1 intento restante.</ strong>
+        other: Tiene usted <strong>%{count} intentos restantes.</strong>
+      button:
+        fail: Bueno
+        jobfail: Inténtelo de nuevo mañana
+        timeout: Inténtelo de nuevo
+        warning: Inténtelo de nuevo
+      errors:
+        link: contáctanos
+        text: Si sigues recibiendo estos errores, %{link} o vuelve a intentarlo mañana.
+      phone:
+        fail: Para su seguridad, la verificación de identidad de su cuenta está <strong>bloqueada
+          durante 24 horas</strong>.
+        heading: No hemos podido encontrar registros que coincidan con la información
+          de su teléfono.
+        jobfail: NOT TRANSLATED YET
+        timeout: NOT TRANSLATED YET
+        warning: Compruebe la información que ingresó.
+      sessions:
+        fail: Para su seguridad, la verificación de identidad de su cuenta está <strong>bloqueada
+          durante 24 horas</strong>.
+        heading: No hemos podido encontrar registros que coincidan con su información
+          personal.
+        jobfail: NOT TRANSLATED YET
+        timeout: NOT TRANSLATED YET
+        warning: Compruebe la información que ingresó. Los errores comunes son números
+          incorrectos de Seguro Social, código postal o fecha de nacimiento.
     form:
       activate_by_mail: obtener un código por correo electrónico en su lugar ›
       address1: Dirección
@@ -75,7 +103,6 @@ es:
       dupe_ssn2_html: Por favor %{link} con el email que utilizó originalmente.
       dupe_ssn2_link: Cerrar ahora y volver a iniciar sesión
       hardfail: NOT TRANSLATED YET
-      hardfail4_html: NOT TRANSLATED YET
       help_center_html: Visite nuestro <strong>Centro de Ayuda</strong> para obtener
         más información sobre la verificación de su cuenta.
       jurisdiction:
@@ -107,6 +134,9 @@ es:
         - no es un teléfono virtual (como Google Voice o Skype)
         - no es un número de teléfono prepago
         - un número de EE. UU.
+      read_about_security_and_privacy:
+        link: leer sobre cómo login.gov mantiene su información segura
+        text: Puede %{link} en nuestra página de ayuda.
       return_to_profile: NOT TRANSLATED YET
       return_to_sp_html: NOT TRANSLATED YET
       review:
@@ -133,32 +163,6 @@ es:
         success: Debe llegar en 5 a 10 días laborales.
       agencies_login: NOT TRANSLATED YET
       agency_login_html: NOT TRANSLATED YET
-    modal:
-      attempts:
-        one: Tiene usted <strong> 1 intento restante.</ strong>
-        other: Tiene usted <strong>%{count} intentos restantes.</strong>
-      button:
-        fail: Bueno
-        jobfail: Inténtelo de nuevo mañana
-        warning: Inténtelo de nuevo
-      phone:
-        fail: Su cuenta está <strong>bloqueada por 24 horas</ strong> antes de intentar
-          verificarla de nuevo. Consulte nuestra sección de Ayuda para obtener más
-          información sobre la verificación de identidad.
-        heading: No hemos podido encontrar registros que coincidan con la información
-          de su teléfono.
-        jobfail: NOT TRANSLATED YET
-        timeout: NOT TRANSLATED YET
-        warning: Compruebe la información que ingresó.
-      sessions:
-        fail: Su cuenta está <strong>bloqueada por 24 horas</ strong> antes de que
-          pueda intentar verificarla de nuevo.
-        heading: No hemos podido encontrar registros que coincidan con su información
-          personal.
-        jobfail: NOT TRANSLATED YET
-        timeout: NOT TRANSLATED YET
-        warning: Compruebe la información que ingresó. Los errores comunes son números
-          incorrectos de Seguro Social, código postal o fecha de nacimiento.
     review:
       dob: Fecha de nacimiento
       full_name: Nombre completo
