--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -24,7 +24,6 @@ fr:
       bad_dob: Votre date de naissance doit être une date valide.
       duplicate_ssn: Un compte existe déjà avec l'information que vous avez fournie.
         chiffres.
-      hardfail: Nous sommes dans l'incapacité de vérifier votre identité pour le moment.
       incorrect_password: Le mot de passe que vous avez inscrit est incorrect.
       mail_limit_reached: Vous avez demandé trop de lettres au cours du dernier mois.
       pattern_mismatch:
@@ -38,6 +37,36 @@ fr:
         de cet état.
       unsupported_jurisdiction_sp: Veuillez visiter %{sp_name} pour accéder à votre
         compte.
+    failure:
+      attempts:
+        one: Il ne vous reste qu' strongune tentative./strong
+        other: Il ne vous reste que strong%{count} tentatives./strong
+      button:
+        fail: OK
+        jobfail: Essayez à nouveau demain
+        timeout: Essayez à nouveau
+        warning: Essayez à nouveau
+      errors:
+        link: contactez-nous
+        text: Si vous continuez à recevoir ces erreurs, %{link} ou réessayez demain.
+      phone:
+        fail: Pour votre sécurité, la vérification d'identité de votre compte est
+          <strong>verrouillée pendant 24 heures</strong>.
+        heading: Nous ne trouvons pas de données qui correspondent à vos informations
+          téléphoniques.
+        jobfail: NOT TRANSLATED YET
+        timeout: NOT TRANSLATED YET
+        warning: Veuillez vérifier l'information que vous avez fournie.
+      sessions:
+        fail: Pour votre sécurité, la vérification d'identité de votre compte est
+          <strong>verrouillée pendant 24 heures</strong>.
+        heading: Nous ne trouvons pas de données qui correspondent à vos informations
+          téléphoniques.
+        jobfail: NOT TRANSLATED YET
+        timeout: NOT TRANSLATED YET
+        warning: Veuillez vérifier l'information que vous avez fournie. Un numéro
+          de sécurité sociale, un code ZIP ou une date de naissance mal écrits sont
+          des erreurs communes.
     form:
       activate_by_mail: obtenir un code par courrier à la place ›
       address1: Adresse
@@ -81,7 +110,6 @@ fr:
         originalement.
       dupe_ssn2_link: déconnectez-vous puis connectez-vous à nouveau
       hardfail: NOT TRANSLATED YET
-      hardfail4_html: NOT TRANSLATED YET
       help_center_html: Visitez notre <strong>Centre d'aide</strong> pour en apprendre
         davantage sur la façon dont nous vérifions votre compte.
       jurisdiction:
@@ -114,6 +142,9 @@ fr:
         - pas un téléphone virtuel (comme Google Voice ou Skype)
         - pas un numéro de téléphone prépayé
         - un numéro américain
+      read_about_security_and_privacy:
+        link: lire comment login.gov protège vos informations
+        text: Vous pouvez %{link} sur notre page d'aide.
       return_to_profile: NOT TRANSLATED YET
       return_to_sp_html: NOT TRANSLATED YET
       review:
@@ -143,33 +174,6 @@ fr:
         success: Elle devrait arriver dans 5 à 10 jours ouvrables.
       agencies_login: NOT TRANSLATED YET
       agency_login_html: NOT TRANSLATED YET
-    modal:
-      attempts:
-        one: Il ne vous reste qu' strongune tentative./strong
-        other: Il ne vous reste que strong%{count} tentatives./strong
-      button:
-        fail: OK
-        jobfail: Essayez à nouveau demain
-        warning: Essayez à nouveau
-      phone:
-        fail: Votre compte est strongverrouillé pour 24 heures/strong au cours desquelles
-          vous ne pourrez pas y accéder. Consultez notre Centre d'aide pour plus d'information
-          sur la vérification de votre identité.
-        heading: Nous ne trouvons pas de données qui correspondent à vos informations
-          téléphoniques.
-        jobfail: NOT TRANSLATED YET
-        timeout: NOT TRANSLATED YET
-        warning: Veuillez vérifier l'information que vous avez fournie.
-      sessions:
-        fail: Votre compte est strongverrouillé pour 24 heures/strong au cours desquelles
-          vous ne pourrez pas y accéder.
-        heading: Nous ne trouvons pas de données qui correspondent à vos informations
-          téléphoniques.
-        jobfail: NOT TRANSLATED YET
-        timeout: NOT TRANSLATED YET
-        warning: Veuillez vérifier l'information que vous avez fournie. Un numéro
-          de sécurité sociale, un code ZIP ou une date de naissance mal écrits sont
-          des erreurs communes.
     review:
       dob: Date de naissance
       full_name: Nom complet
