LG-399 Fix confusing placeholder phone number
**Why**: The support center is experiencing interactions where users don't understand that the placeholder number in the phone number field is an example. Users are confusing it as "not my number" and "who's number is that and how did it get there".

**How**: In check phone validity globally replace the placeholder digits with the number sign '#'. Handle the condition where the country format changes by adding a listener to the focus event.

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -18,6 +18,7 @@ en:
         update: Update
     confirmation:
       show_hdr: Create a strong password
+    example: 'example:'
     messages:
       remember_device: Remember this browser for %{duration} days
     passwords:
