--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -18,6 +18,7 @@ fr:
         update: Mettre à jour
     confirmation:
       show_hdr: Créez un mot de passe fort
+    example: 'exemple:'
     messages:
       remember_device: Enregistrer ce navigateur pendant %{duration} jours
     passwords:
