LG-460 Display fake banner in lower environments.
**Why**: Our lower environment websites (dev, int, qa, staging, etc.)
are public, and sometimes people visit them without realizing they are
not on secure.login.gov. When that happens, we want to make sure they
know they are not on the production site by displaying a banner at the
top of the site that says this is a FAKE site.

--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -152,7 +152,8 @@ es:
       sessions:
         id_information_message: como aparece en su identificación emitida por el estado
         id_information_subtitle: Información de identificación
-        no_pii: No utilice información personal real (sólo para propósitos de demostración)
+        no_pii: FALSO No utilice información personal real (sólo para propósitos de
+          demostración) FALSO
         review_message: Cuando ingrese su contraseña, login.gov protegerá su información
           personal. Hacemos esto para asegurarnos de que nadie más pueda acceder a
           su información.
