--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -161,8 +161,8 @@ fr:
       sessions:
         id_information_message: tel qu'il apparaît sur votre carte d'identité officielle
         id_information_subtitle: Informations d'identification
-        no_pii: N'utilisez pas de véritables données personnelles (il s'agit d'une
-          démonstration seulement)
+        no_pii: TRUQUÉ N'utilisez pas de véritables données personnelles (il s'agit
+          d'une démonstration seulement) TRUQUÉ
         review_message: Lorsque vous entrez votre mot de passe, login.gov sécurise
           vos informations personnelles. Nous faisons cela pour nous assurer que personne
           d'autre ne puisse accéder à vos informations.
