--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   shared:
+    fake_banner:
+      fake_site: A FAKE website of the United States government
     footer_lite:
       gsa: U.S. General Services Administration
     usa_banner:
