--- a/config/locales/shared/es.yml
+++ b/config/locales/shared/es.yml
@@ -1,6 +1,8 @@
 ---
 es:
   shared:
+    fake_banner:
+      fake_site: Un FALSO sitio web del gobierno de Estados Unidos
     footer_lite:
       gsa: Administración General de Servicios de EE. UU.
     usa_banner:
