--- a/config/locales/shared/fr.yml
+++ b/config/locales/shared/fr.yml
@@ -2,7 +2,7 @@
 fr:
   shared:
     fake_banner:
-      fake_site: Un site FAKE du gouvernement des États-Unis
+      fake_site: Un site TRUQUÉ du gouvernement des États-Unis
     footer_lite:
       gsa: Administration des services généraux des États-Unis
     usa_banner:
