Refactor and fix account reset requests
**Why**:
- We value lean controllers with minimal business logic
- To fix a bug where users without a phone would see a message that an
SMS was sent to their phone
- To fix a bug where users who had not yet set up 2FA were redirected to
the phone setup page instead of the 2FA setup page
- To fix the French translation for the SMS message
- To capture analytics about what kind of 2FA options the user has
configured, to see if phone users request account deletion more than
TOTP users, for example.
- To capture analytics for visiting the account deletion page

--- a/config/locales/account_reset/es.yml
+++ b/config/locales/account_reset/es.yml
@@ -9,11 +9,12 @@ es:
       title: Has eliminado tu cuenta
     confirm_request:
       check_your_email: Consultar su correo electrónico
+      close_window: Puede cerrar esta ventana si ha terminado.
       instructions: Enviamos un correo electrónico a <strong>%{email}</strong> para
         comenzar el proceso de eliminación de cuenta. Siga las instrucciones en su
-        correo electrónico para completar el proceso.<br><br>Como medida de seguridad,
-        también enviamos un mensaje de texto a su registro número de teléfono.<br><br>
-        Puede cerrar esta ventana si ha terminado.
+        correo electrónico para completar el proceso.
+      security_note: Como medida de seguridad, también enviamos un mensaje de texto
+        a su registro número de teléfono.
     delete_account:
       are_you_sure: "¿Seguro que quieres eliminar tu cuenta?"
       cancel: Cancelar
