--- a/config/locales/account_reset/en.yml
+++ b/config/locales/account_reset/en.yml
@@ -9,10 +9,11 @@ en:
       title: You have deleted your account
     confirm_request:
       check_your_email: Check your email
+      close_window: You can close this window if you're done.
       instructions: We sent an email to <strong>%{email}</strong> to begin the account
         delete process. Follow the instructions in your email to complete the process.
-        <br><br> As a security measure, we also sent a text to your registered phone
-        number. <br><br> You can close this window if you are done.
+      security_note: As a security measure, we also sent a text to your registered
+        phone number.
     delete_account:
       are_you_sure: Are you sure you want to delete your account?
       cancel: Cancel
