Refactor AccountReset::DeleteAccountController
**Why**: To make it more consistent with other controllers and ensure
all desired analytics are properly captured.

**How**:
- Use service objects to validate the granted token, capture analytics,
and process the account deletion
- Fix the link to create a new account to point to the email sign up
page instead of the home page
- Remove unnecessary token param from `delete_account/show` view
- Move localizations out of Devise and into the `errors` file
- Update controller specs to test all analytics and before_action
- Update feature spec to test that the deletion confirmation email is
sent

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -4,6 +4,12 @@ en:
     account_reset:
       cancel_token_invalid: cancel token is invalid
       cancel_token_missing: cancel token is missing
+      granted_token_expired: The link to delete your login.gov account has expired.
+        Please create another request to delete your account.
+      granted_token_invalid: The link to delete your login.gov account is invalid.
+        Please try clicking the link in your email again.
+      granted_token_missing: The link to delete your login.gov account is invalid.
+        Please try clicking the link in your email again.
     confirm_password_incorrect: Incorrect password.
     invalid_authenticity_token: Oops, something went wrong. Please try again.
     invalid_totp: Invalid code. Please try again.
