--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -4,6 +4,10 @@ es:
     account_reset:
       cancel_token_invalid: NOT TRANSLATED YET
       cancel_token_missing: NOT TRANSLATED YET
+      granted_token_expired: El enlace para eliminar su cuenta de login.gov ha caducado.
+        Crea otra solicitud para eliminar tu cuenta.
+      granted_token_invalid: NOT TRANSLATED YET
+      granted_token_missing: NOT TRANSLATED YET
     confirm_password_incorrect: La contraseña es incorrecta.
     invalid_authenticity_token: "¡Oops! Algo salió mal. Inténtelo de nuevo."
     invalid_totp: El código es inválido. Vuelva a intentarlo.
