--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -4,6 +4,10 @@ fr:
     account_reset:
       cancel_token_invalid: NOT TRANSLATED YET
       cancel_token_missing: NOT TRANSLATED YET
+      granted_token_expired: Le lien pour supprimer votre compte login.gov a expiré.
+        Veuillez créer une autre demande pour supprimer votre compte.
+      granted_token_invalid: NOT TRANSLATED YET
+      granted_token_missing: NOT TRANSLATED YET
     confirm_password_incorrect: Mot de passe incorrect.
     invalid_authenticity_token: Oups, une erreur s'est produite. Veuillez essayer
       de nouveau.
