verify/session design tweaks

--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -1,7 +1,7 @@
 ---
 en:
   links:
-    access_help: Protect your data.
+    access_help: How login.gov protects your data.
     account:
       reactivate:
         with_key: I have my key
