LG-711 Stop asking for attestation and catch errors raised by AuthenticatorAttestationResponse#valid?
**Why**: Attestation is not needed and we need to catch errors where an unsupported format is detected by AuthenticatorAttestationResponse#valid

**How**: Set the attestation to 'none' for the navigator.credentials.create options hash in the javascript.  Place a rescue block around the valid? call to the gem/object on the server side.

--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -47,6 +47,9 @@ es:
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Su contraseña no es suficientemente segura. %{feedback}
     webauthn_setup:
+      attestation_error: Lo sentimos, pero su clave de seguridad no parece ser una
+        clave de seguridad U2F. Asegúrese de que su dispositivo esté en https://fidoalliance.org/certification/fido-certified-products/
+        y si cree que el error es nuestro, contáctenos en hello@login.gov.
       delete_last: Lo sentimos, no puedes eliminar tu última opción de MFA.
       general_error: Hubo un error al agregar su clave de seguridad de hardware. Inténtalo
         de nuevo.
