Don't tell users to contact us on 2FA key use.
**Why**: We don't currently take any action when users write in about
this. This is a very frustrating experience: they are just doing what we
say but we aren't doing anything about it.

**How**: Remove contact us language from email and SMS around personal
key use.

--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -14,7 +14,7 @@ es:
         confirmar su número de teléfono. Este código caducará en %{expiration} minutos."
     sms_personal_key_regeneration_notifier_job:
       message: Se ha emitido una nueva clave personal para tu cuenta %{app}. Si no
-        eres tú, restablece tu contraseña y ponte en contacto con nosotros en security@login.gov.
+        eres tú, restablece tu contraseña.
     sms_personal_key_sign_in_notifier_job:
       message: Su clave personal solo se utilizó para iniciar sesión en su cuenta
-        %{app}. Si no fue así, reinicie su contraseña y contáctenos en security@login.gov.
+        %{app}. Si no fue así, reinicie su contraseña.
