--- a/config/locales/jobs/fr.yml
+++ b/config/locales/jobs/fr.yml
@@ -16,9 +16,7 @@ fr:
         minutes."
     sms_personal_key_regeneration_notifier_job:
       message: Une nouvelle clé personnelle a été émise pour votre compte %{app}.
-        Si vous ne l'avez pas demandée, réinitialisez votre mot de passe et contactez-nous
-        à security@login.gov.
+        Si vous ne l'avez pas demandée, réinitialisez votre mot de passe.
     sms_personal_key_sign_in_notifier_job:
       message: Votre clé personnelle a été utilisée pour vous connecter à votre compte
-        %{app}. Si ce n’était pas vous, changez votre mot de passe et contactez-nous
-        à security@login.gov.
+        %{app}. Si ce n’était pas vous, changez votre mot de passe.
