--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -14,7 +14,7 @@ en:
         your phone number. This code will expire in %{expiration} minutes."
     sms_personal_key_regeneration_notifier_job:
       message: A new personal key has been issued for your %{app} account. If this
-        wasn’t you, reset your password and contact us at security@login.gov.
+        wasn’t you, reset your password.
     sms_personal_key_sign_in_notifier_job:
       message: Your personal key was just used to sign into your %{app} account. If
-        this wasn’t you, reset your password and contact us at security@login.gov.
+        this wasn’t you, reset your password.
