--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -58,9 +58,7 @@ es:
         o la clave de seguridad. </li><li><strong>En la <a href="%{account_url}">página
         de tu cuenta de login.gov</a>, solicita una nueva clave personal</strong>.
         Recuerda no compartirla nunca a menos que la estés usando para acceder a un
-        sitio web de confianza que utilice login.gov.</li></ol></p><p>Deberías ponerte
-        en contacto con nosotros llamando al 844-875-6446 o enviando un correo electrónico
-        a <a href="mailto:security@login.gov">security@login.gov</a>.</p><br>Gracias,<br>El
+        sitio web de confianza que utilice login.gov.</li></ol></p><br>Gracias,<br>El
         equipo de login.gov
       intro: Nueva clave personal emitida
       subject: Alerta de seguridad de la cuenta
@@ -78,9 +76,7 @@ es:
         de teléfono, la aplicación de autenticación, o la clave de seguridad.</li><li><strong>En
         la página de su cuenta login.gov, solicite una nueva clave personal.</strong>
         Recuerde, nunca lo comparta a menos que lo esté utilizando para iniciar sesión
-        en un sitio web de confianza que utiliza login.gov.</li></ol></p><p>Luego
-        debe comunicarse con nosotros llamando al 844-875-6446 o enviando un e-mail
-        a <a href="mailto:security@login.gov">security@login.gov</a>.</p> <br>Gracias,<br>El
+        en un sitio web de confianza que utiliza login.gov.</li></ol></p><br>Gracias,<br>El
         equipo de login.gov
       intro: Clave personal utilizada para iniciar sesión
       subject: Alerta de seguridad de cuenta
