LG-1100 Limit doc auth image retries/acuant calls
**Why**: To keep user data secure and prevent brute force attacks

**How**: Add a generic throttler table/class to handle a variety of throttling use cases and not have to continually add new fields to the user table.  Provide service classes to handle throttling. Add these throttles to the front and back image calls to Acuant.

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -18,6 +18,8 @@ en:
       token_missing: token missing
     confirm_password_incorrect: Incorrect password.
     doc_auth:
+      acuant_throttle: To prevent abuse we limit the amount of times you can attempt
+        to validate a document.  Please try again later.
       general_error: Your state issued ID could not be verified.  Please try uploading
         different images starting with the front of your state issued ID.
     invalid_authenticity_token: Oops, something went wrong. Please try again.
